--- a/Dungeon/Dungeon/Dungeon.vcxproj
+++ b/Dungeon/Dungeon/Dungeon.vcxproj
@@ -113,6 +113,10 @@
     <ClCompile Include="MiniGoblin.cpp" />
     <ClCompile Include="MiniMap.cpp" />
     <ClCompile Include="MiniMapPlayer.cpp" />
+    <ClCompile Include="MiniSwitchWall.cpp" />
+    <ClCompile Include="MiniSwitchWall1.cpp" />
+    <ClCompile Include="MiniSwitchWall2.cpp" />
+    <ClCompile Include="MiniSwitchWall3.cpp" />
     <ClCompile Include="Patroller.cpp" />
     <ClCompile Include="PatrollerAnimation.cpp" />
     <ClCompile Include="PatrollerAttack.cpp" />
@@ -123,10 +127,10 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Scroll.cpp" />
     <ClCompile Include="SnakeCopter.cpp" />
-    <ClCompile Include="SnakeCopter1.cpp" />
-    <ClCompile Include="SnakeCopter1Animation.cpp" />
-    <ClCompile Include="SnakeCopter1Attack.cpp" />
-    <ClCompile Include="SnakeCopter1Move.cpp" />
+    <ClCompile Include="TatteredId.cpp" />
+    <ClCompile Include="TatteredIdAnimation.cpp" />
+    <ClCompile Include="TatteredIdAttack.cpp" />
+    <ClCompile Include="TatteredIdMove.cpp" />
     <ClCompile Include="SnakeCopterAnimation.cpp" />
     <ClCompile Include="SnakeCopterAttack.cpp" />
     <ClCompile Include="SnakeCopterMove.cpp" />
@@ -241,6 +245,10 @@
     <ClInclude Include="MiniGoblin.h" />
     <ClInclude Include="MiniMap.h" />
     <ClInclude Include="MiniMapPlayer.h" />
+    <ClInclude Include="MiniSwitchWall.h" />
+    <ClInclude Include="MiniSwitchWall1.h" />
+    <ClInclude Include="MiniSwitchWall2.h" />
+    <ClInclude Include="MiniSwitchWall3.h" />
     <ClInclude Include="Patroller.h" />
     <ClInclude Include="PatrollerAnimation.h" />
     <ClInclude Include="PatrollerAttack.h" />
@@ -252,10 +260,10 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Scroll.h" />
     <ClInclude Include="SnakeCopter.h" />
-    <ClInclude Include="SnakeCopter1.h" />
-    <ClInclude Include="SnakeCopter1Animation.h" />
-    <ClInclude Include="SnakeCopter1Attack.h" />
-    <ClInclude Include="SnakeCopter1Move.h" />
+    <ClInclude Include="TatteredId.h" />
+    <ClInclude Include="TatteredIdAnimation.h" />
+    <ClInclude Include="TatteredIdAttack.h" />
+    <ClInclude Include="TatteredIdMove.h" />
     <ClInclude Include="SnakeCopterAnimation.h" />
     <ClInclude Include="SnakeCopterAttack.h" />
     <ClInclude Include="SnakeCopterMove.h" />
