--- a/Dungeon/Dungeon/Dungeon.vcxproj.filters
+++ b/Dungeon/Dungeon/Dungeon.vcxproj.filters
@@ -79,7 +79,13 @@
     <Filter Include="Enemy\Battery">
       <UniqueIdentifier>{8fc00bad-92ed-4eb2-8a78-005a776adbf0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Enemy\SnakeCopter1">
+    <Filter Include="Stage\SwitchWall">
+      <UniqueIdentifier>{4983163b-a351-4589-9f9d-1a7e8a1e292d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Stage\MiniSwitchWall">
+      <UniqueIdentifier>{beaf5fb0-5718-457e-8166-04e858b50a2f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Enemy\TatteredId">
       <UniqueIdentifier>{d7f81808-c135-4fe0-88f2-f4c5070b1090}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -213,29 +219,41 @@
     <ClCompile Include="BatteryMove.cpp">
       <Filter>Enemy\Battery</Filter>
     </ClCompile>
-    <ClCompile Include="SnakeCopter1.cpp">
-      <Filter>Enemy\SnakeCopter1</Filter>
-    </ClCompile>
-    <ClCompile Include="SnakeCopter1Animation.cpp">
-      <Filter>Enemy\SnakeCopter1</Filter>
-    </ClCompile>
-    <ClCompile Include="SnakeCopter1Attack.cpp">
-      <Filter>Enemy\SnakeCopter1</Filter>
-    </ClCompile>
-    <ClCompile Include="SnakeCopter1Move.cpp">
-      <Filter>Enemy\SnakeCopter1</Filter>
-    </ClCompile>
     <ClCompile Include="SwitchWall.cpp">
-      <Filter>Stage</Filter>
+      <Filter>Stage\SwitchWall</Filter>
     </ClCompile>
     <ClCompile Include="SwitchWall1.cpp">
-      <Filter>Stage</Filter>
+      <Filter>Stage\SwitchWall</Filter>
     </ClCompile>
     <ClCompile Include="SwitchWall2.cpp">
-      <Filter>Stage</Filter>
+      <Filter>Stage\SwitchWall</Filter>
     </ClCompile>
     <ClCompile Include="SwitchWall3.cpp">
-      <Filter>Stage</Filter>
+      <Filter>Stage\SwitchWall</Filter>
+    </ClCompile>
+    <ClCompile Include="MiniSwitchWall.cpp">
+      <Filter>Stage\MiniSwitchWall</Filter>
+    </ClCompile>
+    <ClCompile Include="MiniSwitchWall1.cpp">
+      <Filter>Stage\MiniSwitchWall</Filter>
+    </ClCompile>
+    <ClCompile Include="MiniSwitchWall2.cpp">
+      <Filter>Stage\MiniSwitchWall</Filter>
+    </ClCompile>
+    <ClCompile Include="MiniSwitchWall3.cpp">
+      <Filter>Stage\MiniSwitchWall</Filter>
+    </ClCompile>
+    <ClCompile Include="TatteredId.cpp">
+      <Filter>Enemy\TatteredId</Filter>
+    </ClCompile>
+    <ClCompile Include="TatteredIdAnimation.cpp">
+      <Filter>Enemy\TatteredId</Filter>
+    </ClCompile>
+    <ClCompile Include="TatteredIdAttack.cpp">
+      <Filter>Enemy\TatteredId</Filter>
+    </ClCompile>
+    <ClCompile Include="TatteredIdMove.cpp">
+      <Filter>Enemy\TatteredId</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -575,29 +593,41 @@
     <ClInclude Include="BatteryMove.h">
       <Filter>Enemy\Battery</Filter>
     </ClInclude>
-    <ClInclude Include="SnakeCopter1.h">
-      <Filter>Enemy\SnakeCopter1</Filter>
-    </ClInclude>
-    <ClInclude Include="SnakeCopter1Animation.h">
-      <Filter>Enemy\SnakeCopter1</Filter>
-    </ClInclude>
-    <ClInclude Include="SnakeCopter1Attack.h">
-      <Filter>Enemy\SnakeCopter1</Filter>
-    </ClInclude>
-    <ClInclude Include="SnakeCopter1Move.h">
-      <Filter>Enemy\SnakeCopter1</Filter>
-    </ClInclude>
     <ClInclude Include="SwitchWall.h">
-      <Filter>Stage</Filter>
+      <Filter>Stage\SwitchWall</Filter>
     </ClInclude>
     <ClInclude Include="SwitchWall1.h">
-      <Filter>Stage</Filter>
+      <Filter>Stage\SwitchWall</Filter>
     </ClInclude>
     <ClInclude Include="SwitchWall2.h">
-      <Filter>Stage</Filter>
+      <Filter>Stage\SwitchWall</Filter>
     </ClInclude>
     <ClInclude Include="SwitchWall3.h">
-      <Filter>Stage</Filter>
+      <Filter>Stage\SwitchWall</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniSwitchWall.h">
+      <Filter>Stage\MiniSwitchWall</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniSwitchWall1.h">
+      <Filter>Stage\MiniSwitchWall</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniSwitchWall2.h">
+      <Filter>Stage\MiniSwitchWall</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniSwitchWall3.h">
+      <Filter>Stage\MiniSwitchWall</Filter>
+    </ClInclude>
+    <ClInclude Include="TatteredId.h">
+      <Filter>Enemy\TatteredId</Filter>
+    </ClInclude>
+    <ClInclude Include="TatteredIdAnimation.h">
+      <Filter>Enemy\TatteredId</Filter>
+    </ClInclude>
+    <ClInclude Include="TatteredIdAttack.h">
+      <Filter>Enemy\TatteredId</Filter>
+    </ClInclude>
+    <ClInclude Include="TatteredIdMove.h">
+      <Filter>Enemy\TatteredId</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
