アニメーションの分離

--- a/Dungeon/Dungeon/Dungeon.vcxproj
+++ b/Dungeon/Dungeon/Dungeon.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="PatrollerAttack.cpp" />
     <ClCompile Include="PatrollerMove.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerAnimation.cpp" />
     <ClCompile Include="PlayerAttack.cpp" />
     <ClCompile Include="PlayerMove.cpp" />
     <ClCompile Include="Scene.cpp" />
@@ -254,6 +255,7 @@
     <ClInclude Include="PatrollerAttack.h" />
     <ClInclude Include="PatrollerMove.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerAnimation.h" />
     <ClInclude Include="PlayerAttack.h" />
     <ClInclude Include="PlayerMove.h" />
     <ClInclude Include="PlayerState.h" />
